# gravity_sandbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gen_xcodeproj.sh
.vscode_macos/: launch.json  tasks.json
src/: bodies_generator.cpp  bodies_generator.h  bodies_holder.cpp  bodies_holder.h  body.cpp  body.h  drawable_body.cpp  drawable_body.h  main.cpp  simulation.cpp  simulation.h
src/base/: body.cpp  body.h  quadtree.h  quadtree.ipp  simulation.cpp  simulation.h
src/controllers/: simulation_controller.cpp  simulation_controller.h
src/graphics/: drawable_body.cpp
src/physics/: barnes_hut_simulation.cpp  barnes_hut_simulation.h  body.cpp  body.h  nbody_simulation.cpp  nbody_simulation.h  simulation_controller.cpp  simulation_controller.h
src/utils/: bodies_generator.cpp  bodies_generator.h  bodies_holder.cpp  bodies_holder.h
